# whispering

./: .env  .gitignore  .markdownlint.json  12  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  download_whisper_models.py  nginx.conf  package-lock.json  package.json  pyproject.toml  setup.cfg  stream_file.py
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  codeql-analysis.yml  stale-issues.yml  typos.yml
scripts/: check_null.py  check_version.py
tests/: test_cli.py
whisper_streaming/: cli.py  schema.py  serve.py  transcriber.py  websocket_client.py
whispering/: cli.py  pbar.py  resample.py  schema.py  serve.py  transcriber.py  vad.py  websocket_client.py
