[tool.poetry]
name = "whisper-streaming"
version = "0.1.0"
description = ""
authors = ["Yuta Hayashibe <yuta@hayashibe.jp>"]
readme = "README.md"
packages = [{include = "whispering"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
whisper = {git = "https://github.com/openai/whisper.git", rev = '62fe7f1009a534986ac1d32a4aef8c244d029c28'}
sounddevice = "^0.4.5"
pydantic = "^1.10.2"
websockets = "^10.3"


[tool.poetry.group.dev.dependencies]
black = ">=22.8.0"
isort = ">=5.10.1"
flake8 = ">=5.0.4"
pydocstyle = ">=6.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
whispering = "whispering.cli:main"

