[misc]
stable_version = "0.6.4"

[tool.poetry]
name = "whispering"
version = "0.6.4"
description = "Streaming transcriber with whisper"
license = "MIT"
authors = ["Yuta Hayashibe <yuta@hayashibe.jp>"]
readme = "README.md"
repository = "https://github.com/shirayu/whispering.git"
packages = [{include = "whispering"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
whisper = {git = "https://github.com/openai/whisper.git", rev = '9f70a352f9f8630ab3aa0d06af5cb9532bd8c21d'}
sounddevice = "^0.4.5"
pydantic = "^1.10.2"
websockets = "^10.4"
tqdm = "*"
torchaudio = "^0.12.1"
PySoundFile = {version = "^0.9.0.post1", platform = "windows"}


[tool.poetry.group.dev.dependencies]
black = ">=22.8.0"
isort = ">=5.10.1"
flake8 = ">=5.0.4"
pydocstyle = ">=6.1.1"
toml = "^0.10.2"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.3.2"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
whispering = "whispering.cli:main"

[tool.pyright]
pythonVersion = "3.8"
typeCheckingMode = "basic"
exclude = [".venv", "**/node_modules", "**/__pycache__",]
reportPrivateImportUsage = "information"
reportUnusedVariable="warning"

